# curiosity

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Trunk.toml  curiosity.wasm  default.nix  docker-compose.yml  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link
.github/: dependabot.yml
.github/workflows/: clippy.yml  docker.yml  rust.yml
curiosity/: Cargo.toml  index.html  package.json
curiosity/src/: app.rs  lib.rs  main.rs  primitives.rs  utils.rs
curiosity/src/components/heros/: hero.rs  mod.rs
scripts/: rustup.sh  wasmer.sh
xtask/: Cargo.toml
xtask/src/: artifacts.rs  commands.rs  interface.rs  lib.rs  main.rs  primitives.rs  server.rs  utils.rs
xtask/src/args/: mod.rs  mode.rs  platform.rs  target.rs
xtask/src/cli/: commands.rs
xtask/src/cmds/: build.rs  mod.rs  setup.rs  start.rs  test.rs  wasm.rs
xtask/src/pipes/: mod.rs
xtask/src/wasm/: mod.rs
