[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "curiosity"
edition = "2021"
homepage = "https://github.com/FL03/curiosity/wiki"
keywords = []
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/curiosity"
version = "0.1.0"

[workspace.dependencies]
futures = "0.3"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6"
strum = { features = ["derive"], version = "0.24" }

[workspace]
default-members = [
    "curiosity"
]
exclude = [
    # "xtask",
]
members = [
    "curiosity",
    "xtask"
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = "unwind"
rpath = false
opt-level = 'z'
overflow-checks = false