[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "curiosity"
description = "curiosity is a simple microservice"
edition = "2021"
homepage = "https://github.com/FL03/curiosity/wiki"
keywords = []
license = "Apache-2.0"
name = "curiosity"
repository = "https://github.com/FL03/curiosity"
version = "0.1.0"

[[bin]]
name = "curiosity"
path = "src/main.rs"
test = false

[build-dependencies]

[dev-dependencies]

[dependencies]
# scsys = { features = ["wasm"], version = "0.1.40" }

futures = "0.3.25"
gloo = { features = [ "futures" ], version = "0.8" }
hyper_wasi = { features = ["full"], version = "0.15.0" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
tokio_wasi = { features = ["full"], version = "1.23.0" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
