[package]
authors.workspace = true
categories.workspace = true
default-run = "web"
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "curiosity"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]
doctest = false
test = true

[[bin]]
name = "curiosity"
path = "src/main.rs"
test = false

[build-dependencies]

[dependencies]
dioxus = { features = ["macro"], version = "0.3" }
dioxus-web = { features = ["hydrate"], version = "0.3" }
futures.workspace = true
gloo = { features = [ "futures" ], version = "0.8" }
js-sys = { features = [], version = "0.3" }
pulldown-cmark = { features = ["serde"], version = "0.9" }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
wasm-bindgen = { features = [ "serde-serialize" ], version = "0.2" }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Node"
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
