[package]
authors.workspace = true
categories.workspace = true
default-run = "curiosity"
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "curiosity"
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "curiosity"
path = "src/main.rs"
test = false

[build-dependencies]

[dependencies]
anyhow = "1"
hyper_wasi = { features = ["full"], version = "0.15" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio_wasi = { features = ["full"], version = "1" }

[dev-dependencies]


[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
