[package]
authors.workspace = true
default-run = "xtask"
description = "A custom development utility for wasm-based projects"
edition.workspace = true
license.workspace = true
name = "xtask-sdk"
publish = false
version = "0.1.0"

[features]
default = []

server = []

[lib]
bench = false
doctest = false
crate-type = ["cdylib", "rlib"]
test = false

[[bin]]
bench = false
doctest = false
name = "xtask"
path = "src/bin/xtask.rs"
test = false

[build-dependencies]

[dependencies]
scsys = { features = [], version = "0.1.40" }

axum = { features = [], version = "0.6" }
clap = { features = ["cargo", "derive", "env"], version = "4" }

serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["macros", "rt"], version = "1" }
tower = "0.4"
tower-http = { features = ["fs"], version = "0.4"}
tracing = "0.1"
tracing-subscriber = "0.3"

wasmer = { features = ["enable-serde"], version = "3.1" }
# wasmer-wasi = { features = ["enable-serde", "js"], version = "3.1" }
# wasmedge-sdk = { features = [], version = "0.7.1" }
# wasmedge-sys = { features = [], version = "0.12.2" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]